# zephyr

./: west.yml
boards/arm64/qemu_cortex_a53/: Kconfig.defconfig
cmake/modules/: kernel.cmake
doc/kernel/: index.rst
doc/kernel/virtio/: index.rst
drivers/: CMakeLists.txt  Kconfig
drivers/virtio/: CMakeLists.txt  Kconfig  virtio-mmio.c  virtio-net.c  virtio-rng.c  virtio-serial.c  virtio.c
dts/arm64/qemu-virt/: qemu-virt-a53.dtsi
dts/bindings/virtio/: virtio,mmio.yaml  virtio-net.yaml  virtio-rng.yaml  virtio-serial.yaml
include/drivers/virtio/: virtio.h  virtio_config.h  virtio_ids.h
samples/virtio/entropy_oa/: CMakeLists.txt  prj.conf
samples/virtio/entropy_oa/boards/: qemu_cortex_a53.overlay
samples/virtio/net/dhcp/: CMakeLists.txt  prj.conf
samples/virtio/net/dhcp/boards/: qemu_cortex_a53.overlay
samples/virtio/net/dhcp/src/: main.c
samples/virtio/net/dhcp_oa/: CMakeLists.txt  prj.conf
samples/virtio/net/dhcp_oa/boards/: qemu_cortex_a53.overlay
samples/virtio/net/dhcp_oa/src/: main.c
samples/virtio/serial/shell_int/: prj.conf
samples/virtio/serial/shell_int/src/: main.c
samples/virtio/serial/shell_int_oa/: CMakeLists.txt  prj.conf
samples/virtio/serial/shell_poll/: CMakeLists.txt  prj.conf
samples/virtio/serial/shell_poll/boards/: qemu_cortex_a53.overlay
samples/virtio/serial/shell_poll_oa/: prj.conf
samples/virtio/serial/shell_poll_oa/boards/: qemu_cortex_a53.overlay
tests/drivers/entropy/api/: CMakeLists.txt
tests/drivers/entropy/api/boards/: qemu_cortex_a53.conf  qemu_cortex_a53.overlay
